first blog might have syntax issues

--- a/_posts/2022-01-30-week01.md
+++ b/_posts/2022-01-30-week01.md
@@ -1,10 +1,39 @@
 ---
 layout: post
-title: Week 1
+title: Week 1:
 ---
 
+## the concept of open source
 
-This text should be replaced by your first post.
+There was a heavy snowstorm this weekend, one that required a heavy amount of shoveling in the front yard. A failure to do so would open up the potential for lawsuits should someone fall on your property. So every neighbor on my block comes out in the bleak morning, strictly shovels their portion of land, and heads back inside. You can see where the neighbor's shoveling stops (right at the property line) and there is a healthy expectation that your neighbors would shovel any portion of snow that wasn't there own property. Not their property, not their problem.
 
-The easiest way to make your first post is to edit this one.
-Go into /_posts/ and update the 2022-01-30-week01.md file.
+In some ways, I think that the concept of open source is like having an imaginary neighbor who instead of just shoveling their own part, also shovels the whole block. Why? Because it's for the betterment of the community. Because it'll be helpful. Because things don't need to always be capitalized and monetized or locked behind own personal monetary gain.
+
+In the news you often read about how life-saving medicine is locked behind copyrights and ownerships so that companies can raise the price indefinitely and always be making a profit. Anything and everything always seems to have a price. But if you can imagine a world where that medicine is available to everyone, where you don't have to pay hundreds or thousands for a necessity, I think that'd seem pretty great.
+
+Open source, at its most theoretical, seems like an utopian dream where content, ideas, and resources are freely shared between those who want it. You can even see it in the original words proposed by Richard Stallman. The idea that you should be able to see, modify, and discuss software that you interact with on a daily basis seems almost obvious. Theoretically, when I think of open source, I think of this imagined world where people are eager to help others learn more about a topic that they too are heavily invested in. Where a product is built from the ideas and developments of people all over the world, leading to a more deeply comprehensive creation.
+
+Then, theory meets practice.
+
+And in practicality, a lot of open source projects fall into a few categories that ruins the dream behind it.
+
+- The community behind the open source project isn't welcoming. (This is not a fault of open source, it's the fault of humanity.) There will always be people whose sole purposes (it feels) is to make you feel inferior. Who see the phrase constructive criticism and mentally read it as ~~constructive~~ criticism. They'll drop buzz-words or leave critiques that dismiss the idea and you'll be deterred from coming back.
+- The community behind the project doesn't exist. People are busy and have lives that don't involve a given project and constantly maintaining it through pr reviews or discussions is intense emotional and physical work that can sometimes feel overwhelming.
+- The project has an incompatible entry point. Vim is an open source project and I can safely say that between the 1.1k issues and 86 active pull request, it is not a project I ever see myself understanding or contributing to. There are too many algorithms/concepts/abstract syntax trees that I am not familiar with that would stop me from attempting to contribute to the project.
+
+And I guess that's what I aim to take this course for. To find those projects that avoid this categories – that are more aligned with the philosophical side of open source than of anything else. To feel confident in the contributions I aim to make and to find a network of people who are open to accepting newbies like me. I just hope there aren't too many [if you can't figure out how to make the change, you're not qualified to make the change](https://github.com/freeCodeCamp/freeCodeCamp/issues/5345) people out there.
+
+## interesting open source projects (to me)
+
+- I had previously mentioned [Vim](https://github.com/vim/vim) before. I singled out this project out because one of my friends, a recent (brilliant!) NYU graduate, had merged a pr to Vim. And in the entire process of bringing up the issue, to submitting a fix, to responding to feedback, I internally was like `????`. This was, unironically, my first experience dealing with the actual process of contributing to an open source project. Personally knowing someone who was able to recognize an issue and who was also open/determined to fix it, made the whole concept of open source indefinitely less scary.
+
+- I'd never live it down if I didn't mention [Java](https://github.com/openjdk/jdk). One time in Basic Algorithms, I was trying to use Java's heaps and looked at the source code to figure out why they were behaving so weirdly (spoiler: they were behaving normally it was just me :( ).
+
+- Why should you never trust [atom](https://github.com/atom)? Because they make everything up! Created by github!! It's my primary text editor that bases itself off of being "hackable" including having thousands of (even more open source) packages to customize your atom experience
+
+- At NYU, the course registration system is discussed frequently and not always positively. In my freshman year, NYU BUGS an open source club, worked on [Schedge](https://github.com/A1Liu/schedge) which was meant to make schedule planning significantly easier. Schedge is used as an API to multiple front-ends that help look up available classes and I once worked on a project that utilized it back when I first started programming. Working with Schedge was such a wonderful experience especially since the pandemic had just begun. I got to meet really amazing people and learn immensely so...fond memories :)!
+
+## miscellaneous
+
+From the snowstorm mentioned at the beginning of the blog:
+![Snow ducks from the snowstorm!](snowducks.jpg)
