there were in fact syntax issues

--- a/_posts/2022-01-30-week01.md
+++ b/_posts/2022-01-30-week01.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Week 1:
+title: Week 1 - os stands for open source and not operating systems
 ---
 
 ## the concept of open source
