the things i do for ducks

--- a/_posts/2022-01-30-week01.md
+++ b/_posts/2022-01-30-week01.md
@@ -36,4 +36,4 @@ And I guess that's what I aim to take this course for. To find those projects th
 ## miscellaneous
 
 From the snowstorm mentioned at the beginning of the blog:
-![Snow ducks from the snowstorm!](../images/snowducks.jpg)
+![Snow ducks from the snowstorm!](./images/snowducks.png)
