--- a/_posts/2022-02-06-week02.md
+++ b/_posts/2022-02-06-week02.md
@@ -1,10 +1,37 @@
 ---
 layout: post
-title: Week 2
+title: "Week 2 - dbaa stands for don't be an avocado and not downtown brooklyn arts alliance"
 ---
 
+## Code of Conduct
 
-This text should be replaced by your second post.
+At the start of any semester, you get an onslaught of welcome notifications and new syllabuses to read. Syllabuses typically consist of some type of overview, class layout, and grade breakdown for prospective students. I only recently learned that all syllabuses are also required to mention the Academic Integrity Policy regardless of if it gets read or not (I'm ashamed but also not really ashamed to say that I almost never read it). Sometimes all I got was the ✨ gist ✨ of it.
 
-The easiest way to make your second post is to edit this one.
-Go into /_posts/ and update the 2022-02-06-week02.md file.
+I guess I use to categorize the Code of Conduct in a similar way. Rules that were almost kinda obvious ? Rules that we've been learning since elementary school of treating people kindly and respecting other people. But I recognize now that that is a pretty terrible attitude to have towards a document that rallies against terrible attitudes to have.
+
+It is inarguable that you would be able to learn a lot about a company based on its creation of/existence of a Code of Conduct. Some companies might only feature it to avoid behind held liable for behaviors under their watch. Some might do it strictly for PR. To understand its impact, let's pull out everyone's favorite diagram – the venn (just kidding).
+
+The [Go](https://go.dev/conduct) and [Eclipse](https://www.eclipse.org/org/documents/Community_Code_of_Conduct.php) Code of Conducts are both adapted from [Contributor Covenant](https://www.contributor-covenant.org/version/1/4/code-of-conduct/). Yet their adaptions of it also serve as an indication of where their priorities fall. When you compare the Go CoC with what it was originally adapted from, it is clear that the Go community has obviously put more thought into an already thoughtful and comprehensive piece. To me, that speaks to the openness of a community. It's hanging a sign on the metaphorical door and saying 'Hey, join us. We care. And also we'll make sure that you're cared for. And also here's what we'll do if you are not cared for. And also gophers!!!' By comparison, the Eclipse CoC is less of an adaption of the original CoC that it is just a formulaic printout of it with the appropriate names, pronouns, and emails switched out. Paragraphs are copied, with the only difference being `[INSERT EMAIL ADDRESS]` actually being an email address.
+
+A group that is willing to put in the effort to dictate what is and is not acceptable behavior gives me the impression of a company who will care about the actual health of the community too. Here are some ways that the Go Community proved their dedications:
+
+1. Actual Conflict Resolution - I'm sure that every person at one point in their life will experience a phone call/talk with customer service that goes something alone the lines of: "Please wait. Your call is important to us." and then an hour later, you come to realize that your call might actually not be important to them. The Go CoC is the exact opposite of that. Instead of following the required jargon of having an email and then 'promising' to respond back appropriately, the Go CoC lists the exact process that a complaint will go through to ensure that it is handled in a timely fashion (directly -> Project Stewards -> Google committee -> range of punishments). Any company willing to detail all of these steps seems committed to also following through with them. It also sends the message that those who join will be under this same protection.
+2. Gopher Values - Firstly, I like that they are willing to tie their identity to the behavior of its members. There is a level of responsibility and identity that becoming a "gopher". More importantly though are the examples that are provided about acceptable behaviors. Looking at the original CoC, there is enough generic terminology that can safely (from a legal perspective) cover enough scenarios. But generic terminology is vague and gives off a level of insincerity (does anyone really know what `Focusing on what is best for the community` means)? The Go CoC provides actual examples of good behavior showing a level of consideration that goes a long way (eg personally defining what a microaggression was).
+
+A part of me thinks that this difference is because of who the company is marketing itself towards. Google has a greater reputation of being more casual and personable. Even the Go website has a gopher as their website icon. On the other hand, the Eclipse Foundation seems to pride itself on being more professional and so their CoC might be less focused on dictating behavior than it is on covering basic legal guidelines.
+
+That belief is further pushed by other CoCs, namely [Sugar Lab's](https://wiki.sugarlabs.org/go/Sugar_Labs/Legal/Code_of_Conduct). Interestingly, it was based off of the [Ubuntu Coc](https://ubuntu.com/community/code-of-conduct) instead of the Contributor Covenant. Like the Go CoC, it lists out acceptable behaviors and protocols to follow. It does do a great job on elaborating on their ideas and provides even more specific examples that seems specifically tailored to this company (like what to do during a feature freeze). However, I think putting it in Legal and only making it accessible under "Subpages index" takes away from the sincerity of the document. Categorizing it as such makes it seem like they are less interested in the document than they are with not getting sued down the road.
+
+Lastly, we can even look at the [Jekyll CoC](https://jekyllrb.com/docs/conduct/). While it is adapted from the same CoC that Go and Eclipse is, it gives off the impression of having the same legal interest that Sugar Lab has. It is a strict copy of its original source with the only difference being the phrase "both within" instead of "within all." It does give off this impression that little/no thought was put into it because of how strictly formulaic it is.
+
+At the same time, I can't necessarily fault them for this. Like the Terms of Conditions or any other long standing written document, expectations for people to actually and comprehensively read it might be so low that it might seem worthless to modify an already valid document. I think having a thoughtful and personalized CoC is a great indicator of the status of a community but I don't the contrary is necessarily true. In all (blunt and depressing) honesty, I don't see many people first reading the CoC before deciding on whether to contribute or not and I don't see them referencing it until something obviously egregious has been done. I am however glad that there are people who care and I hope to become more like those people in the future. The difference \* is immense.
+
+\*Literally! I ran the terminal command `diff` on all the adapted code of conducts with their original!
+
+## Add-Ons
+
+On learning to create my first add-on, I had been reminded of how fun group projects can be. When the stakes are not Agile level/50% of my grade/won't even compile, getting to talk and interact with people makes me extremely excited for this class. It was a nice atmosphere within my group and also in the entire class. Infinitely better than the normal breakout rooms I've been these past years. Woo!
+
+It's also exciting to see how the concept of open source can really permeate through all different aspects. It isn't necessarily these huge projects that have been developed for years but can even start from something as simple as putting a red border on a webpage. I am optimistically (but still nervously because duh) looking towards the future.
+
+Lastly, I just wanted to do a quick shoutout to my team: Person #1 and Person #2 (named for privacy) thanks for an awesome class. Sorry for all the ducks.
