--- a/_posts/2022-02-06-week02.md
+++ b/_posts/2022-02-06-week02.md
@@ -11,6 +11,8 @@ I guess I use to categorize the Code of Conduct in a similar way. Rules that wer
 
 It is inarguable that you would be able to learn a lot about a company based on its creation of/existence of a Code of Conduct. Some companies might only feature it to avoid behind held liable for behaviors under their watch. Some might do it strictly for PR. To understand its impact, let's pull out everyone's favorite diagram – the venn (just kidding).
 
+#### Go & Eclipse CoCs
+
 The [Go](https://go.dev/conduct) and [Eclipse](https://www.eclipse.org/org/documents/Community_Code_of_Conduct.php) Code of Conducts are both adapted from [Contributor Covenant](https://www.contributor-covenant.org/version/1/4/code-of-conduct/). Yet their adaptions of it also serve as an indication of where their priorities fall. When you compare the Go CoC with what it was originally adapted from, it is clear that the Go community has obviously put more thought into an already thoughtful and comprehensive piece. To me, that speaks to the openness of a community. It's hanging a sign on the metaphorical door and saying 'Hey, join us. We care. And also we'll make sure that you're cared for. And also here's what we'll do if you are not cared for. And also gophers!!!' By comparison, the Eclipse CoC is less of an adaption of the original CoC that it is just a formulaic printout of it with the appropriate names, pronouns, and emails switched out. Paragraphs are copied, with the only difference being `[INSERT EMAIL ADDRESS]` actually being an email address.
 
 A group that is willing to put in the effort to dictate what is and is not acceptable behavior gives me the impression of a company who will care about the actual health of the community too. Here are some ways that the Go Community proved their dedications:
@@ -20,9 +22,15 @@ A group that is willing to put in the effort to dictate what is and is not accep
 
 A part of me thinks that this difference is because of who the company is marketing itself towards. Google has a greater reputation of being more casual and personable. Even the Go website has a gopher as their website icon. On the other hand, the Eclipse Foundation seems to pride itself on being more professional and so their CoC might be less focused on dictating behavior than it is on covering basic legal guidelines.
 
+#### Sugar Lab CoC
+
 That belief is further pushed by other CoCs, namely [Sugar Lab's](https://wiki.sugarlabs.org/go/Sugar_Labs/Legal/Code_of_Conduct). Interestingly, it was based off of the [Ubuntu Coc](https://ubuntu.com/community/code-of-conduct) instead of the Contributor Covenant. Like the Go CoC, it lists out acceptable behaviors and protocols to follow. It does do a great job on elaborating on their ideas and provides even more specific examples that seems specifically tailored to this company (like what to do during a feature freeze). However, I think putting it in Legal and only making it accessible under "Subpages index" takes away from the sincerity of the document. Categorizing it as such makes it seem like they are less interested in the document than they are with not getting sued down the road.
 
+#### Jekyll CoC
+
 Lastly, we can even look at the [Jekyll CoC](https://jekyllrb.com/docs/conduct/). While it is adapted from the same CoC that Go and Eclipse is, it gives off the impression of having the same legal interest that Sugar Lab has. It is a strict copy of its original source with the only difference being the phrase "both within" instead of "within all." It does give off this impression that little/no thought was put into it because of how strictly formulaic it is.
+
+#### Converse of Conduct
 
 At the same time, I can't necessarily fault them for this. Like the Terms of Conditions or any other long standing written document, expectations for people to actually and comprehensively read it might be so low that it might seem worthless to modify an already valid document. I think having a thoughtful and personalized CoC is a great indicator of the status of a community but I don't the contrary is necessarily true. In all (blunt and depressing) honesty, I don't see many people first reading the CoC before deciding on whether to contribute or not and I don't see them referencing it until something obviously egregious has been done. I am however glad that there are people who care and I hope to become more like those people in the future. The difference \* is immense.
 
