--- a/_posts/2022-02-06-week02.md
+++ b/_posts/2022-02-06-week02.md
@@ -7,6 +7,8 @@ title: "Week 2 - dbaa stands for don't be an avocado and not downtown brooklyn a
 
 At the start of any semester, you get an onslaught of welcome notifications and new syllabuses to read. Syllabuses typically consist of some type of overview, class layout, and grade breakdown for prospective students. I only recently learned that all syllabuses are also required to mention the Academic Integrity Policy regardless of if it gets read or not (I'm ashamed but also not really ashamed to say that I almost never read it). Sometimes all I got was the ✨ gist ✨ of it.
 
+<!--more-->
+
 I guess I use to categorize the Code of Conduct in a similar way. Rules that were almost kinda obvious ? Rules that we've been learning since elementary school of treating people kindly and respecting other people. But I recognize now that that is a pretty terrible attitude to have towards a document that rallies against terrible attitudes to have.
 
 It is inarguable that you would be able to learn a lot about a company based on its creation of/existence of a Code of Conduct. Some companies might only feature it to avoid behind held liable for behaviors under their watch. Some might do it strictly for PR. To understand its impact, let's pull out everyone's favorite diagram – the venn (just kidding).
