--- a/_posts/2022-01-30-week01.md
+++ b/_posts/2022-01-30-week01.md
@@ -7,6 +7,8 @@ title: Week 1 - os stands for open source and not operating systems
 
 There was a heavy snowstorm this weekend \*\*, one that required a heavy amount of shoveling in the front yard. A failure to do so would open up the potential for lawsuits should someone fall on your property. So every neighbor on my block comes out in the bleak morning, strictly shovels their portion of land, and heads back inside. You can see where the neighbor's shoveling stops (right at the property line) and there is a healthy expectation that your neighbors would shovel any portion of snow that wasn't there own property. Not their property, not their problem.
 
+<!--more-->
+
 In some ways, I think that the concept of open source is like having an imaginary neighbor who instead of just shoveling their own part, also shovels the whole block. Why? Because it's for the betterment of the community. Because it'll be helpful. Because things don't need to always be capitalized and monetized or locked behind own personal monetary gain.
 
 In the news you often read about how life-saving medicine is locked behind copyrights and ownerships so that companies can raise the price indefinitely and always be making a profit. Anything and everything always seems to have a price. But if you can imagine a world where that medicine is available to everyone, where you don't have to pay hundreds or thousands for a necessity, I think that'd seem pretty great.
