--- a/_posts/2022-02-06-week02.md
+++ b/_posts/2022-02-06-week02.md
@@ -34,9 +34,7 @@ Lastly, we can even look at the [Jekyll CoC](https://jekyllrb.com/docs/conduct/)
 
 #### Converse of Conduct
 
-At the same time, I can't necessarily fault them for this. Like the Terms of Conditions or any other long standing written document, expectations for people to actually and comprehensively read it might be so low that it might seem worthless to modify an already valid document. I think having a thoughtful and personalized CoC is a great indicator of the status of a community but I don't the contrary is necessarily true. In all (blunt and depressing) honesty, I don't see many people first reading the CoC before deciding on whether to contribute or not and I don't see them referencing it until something obviously egregious has been done. I am however glad that there are people who care and I hope to become more like those people in the future. The difference \* is immense.
-
-\*Literally! I ran the terminal command `diff` on all the adapted code of conducts with their original!
+At the same time, I can't necessarily fault them for this. Like the Terms of Conditions or any other long standing written document, expectations for people to actually and comprehensively read it might be so low that it might seem worthless to modify an already valid document. I think having a thoughtful and personalized CoC is a great indicator of the status of a community but I don't the contrary is necessarily true. In all (blunt and depressing) honesty, I don't see many people first reading the CoC before deciding on whether to contribute or not and I don't see them referencing it until something obviously egregious has been done. I am however glad that there are people who care and I hope to become more like those people in the future\*. The difference \*\* is immense.
 
 ## Add-Ons
 
@@ -45,3 +43,9 @@ On learning to create my first add-on, I had been reminded of how fun group proj
 It's also exciting to see how the concept of open source can really permeate through all different aspects. It isn't necessarily these huge projects that have been developed for years but can even start from something as simple as putting a red border on a webpage. I am optimistically (but still nervously because duh) looking towards the future.
 
 Lastly, I just wanted to do a quick shoutout to my team: Person #1 and Person #2 (named for privacy) thanks for an awesome class. Sorry for all the ducks.
+
+## Miscellenous
+
+\*This entire week we focused on CoCs and upon doing homework for another class, I was scrolling through Brightspace and I realized one of my classes had their own CoC. I'm taking an Interactive Media Arts class at Tisch and their [Code of Conduct](https://itpnyu.github.io/ITP-IMA-Code-of-Conduct/community_statement) was, quite honestly, one of the best things I've read all week. Everything about it and its existence is so gorgeous and I get weirdly emotional about it.
+
+\*\*Literally! I ran the terminal command `diff` on all the adapted code of conducts with their original. Maybe I should've used that time to learn how to properly create footnotes instead 🤨.
