not me spelling miscellaneous wrong

--- a/_posts/2022-02-06-week02.md
+++ b/_posts/2022-02-06-week02.md
@@ -44,7 +44,7 @@ It's also exciting to see how the concept of open source can really permeate thr
 
 Lastly, I just wanted to do a quick shoutout to my team: Person #1 and Person #2 (named for privacy) thanks for an awesome class. Sorry for all the ducks.
 
-## Miscellenous
+## Miscellaneous
 
 \*This entire week we focused on CoCs and upon doing homework for another class, I was scrolling through Brightspace and I realized one of my classes had their own CoC. I'm taking an Interactive Media Arts class at Tisch and their [Code of Conduct](https://itpnyu.github.io/ITP-IMA-Code-of-Conduct/community_statement) was, quite honestly, one of the best things I've read all week. Everything about it and its existence is so gorgeous and I get weirdly emotional about it.
 
