found better title ty albert

--- a/_posts/2022-02-06-week02.md
+++ b/_posts/2022-02-06-week02.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Week 2 - dbaa stands for don't be an avocado and not downtown brooklyn arts alliance"
+title: "Week 2 - coc stands for code of conduct not clash of clans"
 ---
 
 ## Code of Conduct
