--- a/_posts/2022-02-20-week04.md
+++ b/_posts/2022-02-20-week04.md
@@ -63,4 +63,4 @@ Overall, I loved this entire experience. I liked how most groups expanded on the
 
 ## miscellaneous
 
-I was working on a project and spent twenty minutes debugging it only to realize I failed to add a ; at the end of one of my statements.
+I was working on a project and spent twenty minutes debugging it only to realize I failed to add a ; at the end of one of my statements. Even worse is that I wasn't the one to realize it. One of my friends was like "Did you put a ; here?" I didn't.
