--- a/_posts/2022-03-06-week06.md
+++ b/_posts/2022-03-06-week06.md
@@ -7,6 +7,8 @@ title: Week 6 - tidepool stands for personal data usage and not anything less
 
 If the Tidepod challenge somehow became the Tidepool challenge, I think the world would be in a much better place than it currently is. I, and I feel comfortable saying the entire class) loved [Christopher Snider's](https://www.linkedin.com/in/christopherasnider/) talk about [Tidepool](https://www.tidepool.org/open).*
 
+<!--more-->
+
 My favorite part was how “non-techy” it felt. To the shock of absolutely no one, a lot of open-source projects that I’ve encountered both in and out of this class always, at its root, felt deeply embedded in technology and computers. In our project evaluations, I evaluated a text editor and even the GNU Public License itself originated from the GNU project. Yet, Christopher’s presentation helped remind me that technology is meant to help people and that people themselves can be enriched – not consumed – by the technology around them. As a CS major, I do get the irony of what I’m saying.
 
 Throughout the talk, Christopher would sometimes preface his slides as being more oriented towards non-technical aspects and I loved it. I’m not diabetic but I can sympathize with the cause and having a deeper, more personal understanding of a disease like this can really only benefit those who listen to his story. I commend how honest he was about his own experience; it made the stakes feel more real than if he just used statistics. And I guess that speaks to the benefit of loving the job that you do. He mentioned it early on in his talk but his emphasis on getting the privilege to do what he does instead of being forced to do so, makes the work seem so altruistic.
