--- a/_posts/2022-03-13-week07.md
+++ b/_posts/2022-03-13-week07.md
@@ -40,7 +40,7 @@ There are people in Russia right now who are getting arrested simply for showing
 
 And those are first amendment right violations. It's not Twitter banning your hate speech, or Facebook limiting what type of graphic video or photo you want to share to other people. It's not a private business refusing you service because you screamed racists slurs at their employees because you refused to wear a mask. And I think once people learn the difference, the world can become a much better place. 
 
-I say all of this because I've been thinking about what we owe to each other. As friends, as neighbors, as citizens, and as people. I also say this as a notorious (among my friends at least) people-pleaser who has come to learn an very unfortunate truth: "You can't be nice to everyone because being nice to certain people is inherently cruel to others" [src](https://twitter.com/meganamram/status/1181598886172844034?lang=en). And it brings us to a larger topic of what open source projects owe to other people. If a person creates a project and someone else does something nefarious with it, how far up the chain should we place blame?
+I say all of this because I've been thinking about what we owe to each other. As friends, as neighbors, as citizens, and as people. I also say this as a notorious (among my friends at least) people-pleaser who has come to learn a very unfortunate truth: "You can't be nice to everyone because being nice to certain people is inherently cruel to others" [src](https://twitter.com/meganamram/status/1181598886172844034?lang=en). And it brings us to a larger topic of what open source projects owe to other people. If a person creates a project and someone else does something nefarious with it, how far up the chain should we place blame?
 
 And this question is seen in all fields across all of time. If someone overdoses on drugs, do we blame themselves for their own lack of self-regulation, the person who sold them the drug, the doctor who innocently prescribed a different gateway drug, or even the company that began making it? And the answer, as is the answer to most things, is that it depends. There's a grayscale. It's on a spectrum. And sure, it's a bit disappointing, but it's also completely true. When we talk about human life and the human complexity behind it, it comes to no one's shock that each case is just a little bit different than the other. 
 
