--- a/_posts/2022-04-10-week11.md
+++ b/_posts/2022-04-10-week11.md
@@ -7,6 +7,8 @@ title: Week 11 - os stands for open source and is NOT a business model
 
 When WhatsApp was bought by Facebook for 19 billion dollars in 2014, I actually didn’t really care. Generally, I’m not that invested in its business purchases and as a general rule of thumb, businesses and their models don’t really interest me. There’s a reason I’m not majoring in economics.
 
+<!--more-->
+
 However, what I did find interesting was how that number came to be. From what I know about WhatsApp, it is a free messaging service that doesn’t have ads. While they definitely had users (currently two billion), I was curious as to how those brokering the deal were able to evaluate the potential worth of a company based on what it could do – especially if it wanted to continue to offer its services for free.
 
 I know now that it charges businesses/companies for some of its messages but the whole business model seemed to bank on the potential of data rather than its service of it. I was so focused on how the app worked from an individual’s perspective (free messaging between my friends) that I failed to see how it could easily be monetized into a billion-dollar company.
