--- a/_posts/2022-05-01-week14.md
+++ b/_posts/2022-05-01-week14.md
@@ -17,7 +17,7 @@ Separately, I also really admired how dedicated she was to stay connected to the
 
 ## and now april 28th
 
-This week was also the week of group presentations :) ! My group, Open Library, presented first (slides here!)[https://docs.google.com/document/d/1XOPfDNr9g4nLPvlYcw_8lWoql9r2eIVah9d_Z5Ekzdo/] and I’ve just really enjoyed this whole experience. I was extremely lucky to be paired in a really fantastic group with some stellar people who have matched my interest in getting Chipotle, Starbucks, and gossiping (as well as obviously doing work). I think it was important that we presented – often times our work throughout the weeks can feel very stagnant because the changes were happening incrementally. To have to go back and do a true reflection made me realize how much my group did accomplish. It encouraged me to really remember how much I benefitted from having the Open Library communities’ support – because on nearly every slide we had, I had wanted to include yet another screenshot of how they have helped all of us. And the presentations also helped me reflect positively on the lessons learned.
+This week was also the week of group presentations :) ! My group, Open Library, presented first [slides here!](https://docs.google.com/document/d/1XOPfDNr9g4nLPvlYcw_8lWoql9r2eIVah9d_Z5Ekzdo/) and I’ve just really enjoyed this whole experience. I was extremely lucky to be paired in a really fantastic group with some stellar people who have matched my interest in getting Chipotle, Starbucks, and gossiping (as well as obviously doing work). I think it was important that we presented – often times our work throughout the weeks can feel very stagnant because the changes were happening incrementally. To have to go back and do a true reflection made me realize how much my group did accomplish. It encouraged me to really remember how much I benefitted from having the Open Library communities’ support – because on nearly every slide we had, I had wanted to include yet another screenshot of how they have helped all of us. And the presentations also helped me reflect positively on the lessons learned.
 
 For the two other presentations – CAGOV and Oppia – I got to see both spectrums of how an open source project could go. The CAGOV group, whose presentation design was absolutely superb (and very on-brand considering their work was on a design system), was rich in the variety of contributions they made. I especially liked how Jay Li, whose initial goal was to work towards accessibility, was able to improve the documentation for design systems so that it became more accessible for those in a non-technical industry. Matching your goals with the work that was completed was a great follow-through and established a really nice line between beginning, middle, and end.
 
