--- a/_posts/2022-05-08-week15.md
+++ b/_posts/2022-05-08-week15.md
@@ -3,16 +3,26 @@ layout: post
 title: Week 15 - does this stand for the final blog?!
 ---
 
+## group presentations
+
 On the final (?!?) week of classes, we had an absolutely wonderful time celebrating the work our other classmates have done throughout the last half of the semester.
 
 Across all the presentations, I deeply appreciated the honesty that these groups had toward their own reflections. They didn't try to buffer their experience by down playing some of the struggles that they had and especially for the groups that presented on the same project, it was clear that the challenges that they both faced were indicative of the types of Open Source projects you can experience rather than an individual’s group’s work. It really emphasized the breadth that is the open source community.
 
 <!--more-->
 
+## group presentations featuring oppia
+
 For example, in both Oppia presentations, I liked how they approached their contributions differently when faced with the same issue of having a really active community that was at times overwhelmed: constantly getting new contributors at the cost of sometimes having a long response time from the maintainers. While Group 7 had to constantly struggle with getting issues assigned and resolved, as well as having to nuke their entire Python environment (sorry Aashish), Group 3’s approach to contributing showed how one could work in the codebase, but also on the product. Contributions to the functionality of a project can run in parallel to contributions to the vitality of the project as well. As they continued to work on Oppia, I enjoyed how their reasoning was well-rooted in their own experience. The struggles they faced, while similar in theme, were personalized to their own responses and issues that it felt like each experience was individually meaningful.
+
+## group presentations featuring blender
 
 Another great open source project presentation came from those who presented on Blender. When I had initially heard of Blender, I was worried about their steep learning curve, both in terms of using the product but also contributing to it. Blender uses a lot of geographical designs and 3D modeling software so intimate knowledge and experience of both seemed crucial to really enjoying this project. It was refreshing to see how both Group 9 and Group 10 also recognized this issue and how one of their main challenges was interacting with the product itself. (I'm also really proud of Jacob’s donut!) As both teams discussed their challenges, we were introduced to a different aspect of open-source: when the logistics of contributing become a challenge. Since Blender used their own proprietary version control system, what I had considered natural in terms of creating a request and asking for issues, they rightfully found it as difficult because they were looking at patches and diffs. And I think it's interesting to learn that there are so many aspects of open source that can appear mindless initially but it's only because we have been given the privilege of having such a process be so simplified. It’s only when we take those things for granted do we realize how nuanced the systems are.
 
+## group presentations featuring one army, zulip, and spicetify
+
 In the remaining projects, I liked how they chose them based off of their own interest, both in terms of personal development – One Army wanted an environmental project – and also their technical development. They were also admirably resourceful when faced with their own difficulties. While Zulip had a sometimes challenging community to work through because of the sheer mass of contributors, through persistence and motivation, they were able to get their work done and found interesting ways to achieve their own mission. Even without the motivational feedback that I really enjoyed with my own team, they were able to carry on and persistent with confidence in the work that they were doing. Likewise in Spicetify, their work with the DevTool is so commendable. I can only imagine how challenging any new software is – let alone one that had a complex debugging system. A huge round of applause to all the groups for their dedication, motivation, and work :) .
+
+## michelleaneous
 
 Assuming that this is my last blog, I just want to say that I have had an absolutely 11/10 time here. I’ll save my final reflections for … our final reflections but thanks to everyone in the class for making this semester so wonderful. :) !
